--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.0",
+    "@angular/animations": "11.0.4",
+    "@angular/cdk": "^13.2.6",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
@@ -18,6 +19,12 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@swimlane/ngx-charts": "^20.1.0",
+    "angular-animations": "^0.11.0",
+    "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
+    "mdb-angular-ui-kit": "^2.0.0",
+    "ngx-toastr": "^14.2.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
